--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
         "php": "^8.2",
         "laravel/breeze": "^2.1",
         "laravel/framework": "^11.9",
+        "laravel/pulse": "^1.2",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "opcodesio/log-viewer": "^3.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
