--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
     "engines": {
         "node": "18.x"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.19",
+        "postcss": "^8.4.40",
+        "tailwindcss": "^3.4.7"
     }
 }
