--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,10 @@
         },
         {
             "src": "/(.*)",
+            "dest": "/$1"
+        },
+        {
+            "src": "/(.*)",
             "dest": "/api/index.php"
         }
     ],
