--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
             "dest": "/build/$1"
         },
         {
+            "src": "/public/(.*)",
+            "dest": "/public/$1"
+        },
+        {
             "src": "/(.*)",
             "dest": "/api/index.php"
         }
